# EKSingleMic

./: AGENTS.md  Cargo.toml  rust-toolchain.toml
assets/: prompts_zh_cn.txt
src/: main.rs
src/app/: commands.rs  mod.rs  state.rs
src/audio/: buffers.rs  capture.rs  devices.rs  mod.rs  render.rs  resample.rs
src/config/: settings.rs
src/ml/: enhancement.rs  mod.rs  runtime.rs  speaker.rs  tse.rs  vad.rs
src/pipeline/: frames.rs  mod.rs  realtime.rs
src/profile/: build.rs  mod.rs  quality.rs  record.rs  storage.rs
src/ui/: debug.rs  devices.rs  inference.rs  mod.rs  training.rs
src/util/: audio_math.rs  mod.rs  time.rs
