[package]
name = "ek-single-mic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
cpal = "0.16"
directories = "6.0"
eframe = { version = "0.33", default-features = true, features = ["wgpu"] }
egui = "0.33"
hound = "3.5"
rtrb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
